# scarlet

./: .gitignore  Cargo.toml
Scarlet-Vtune/: Scarlet-Vtune.vtuneproj
Scarlet-Vtune/r000hs/: r000hs.vtune
Scarlet-Vtune/r000hs/config/: collection.cfg  context_values.cfg  runsa.options
Scarlet-Vtune/r000hs/data.0/: systemcollector-14160-DESKTOP-I4HH9GR.sc
Scarlet-Vtune/r000hs/sqlite-db/_cache_grouper_data4_aperf_mperf_data_grouper/grouper/: 0
Scarlet-Vtune/r000hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
Scarlet-Vtune/r000hs/sqlite-db/_cache_grouper_data4_dd_thread/grouper/: 0
Scarlet-Vtune/r000hs/sqlite-db/_cache_grouper_data4_global_data_grouper/grouper/: 0
Scarlet-Vtune/r000hs/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/grouper/: 0
Scarlet-Vtune/r000hs/sqlite-db/pmu_data/: container.metadata
Scarlet-Vtune/r000hs/sqlite-db/pmu_data/end_tsc/: 0  mapping.xml
Scarlet-Vtune/r000hs/sqlite-db/timelinedb/: directory.xml
Scarlet-Vtune/r000hs/sqlite-db/timelinedb/dbint-27349/instance/0/: 0  mapping.xml
Scarlet-Vtune/r000hs/sqlite-db/timelinedb/dbint-2976/aggregated/0/: 0  mapping.xml
Scarlet-Vtune/r000hs/sqlite-db/timelinedb/dbint-4042/aggregated/0/: 0  mapping.xml
src/: basic_moves.rs  board.rs  eval.rs  evaluate.rs  lib.rs  main.rs  monte.rs  moves.rs  search.rs  sort.rs  sorting.rs  test.rs  tools.rs  transposition_table.rs  turn.rs  uci.rs  utils.rs  zobrist.rs
