[package]
name = "scarlet"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitintr = "0.3.0"
fxhash = "0.2.1"
lazy_static = "1.4.0"
partial_sort = "0.2.0"
